--- a/src/components/MeetMaarisonAcharya/MeetMaarisonAcharya.css
+++ b/src/components/MeetMaarisonAcharya/MeetMaarisonAcharya.css
@@ -94,6 +94,7 @@
     font-weight: bold;
     color: #4f4f4f;
     margin-bottom: 15px;
+    margin-top: -30px;
 }
 
 
@@ -302,4 +303,17 @@
 
 .date-time-row input {
     flex: 1;
+}
+
+.h6-wrapper-2 {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    color: orange;
+}
+
+.zodiac-icon {
+    width: 30px;
+    height: 30px;
+    margin-right: 20px;
 }
