--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -18,9 +18,9 @@
 }
 
 .hero-title {
-    font-size: 6.5rem;
+    font-size: 5rem;
     font-weight: 700;
-    color: #666666;
+    color: #4a4a4a;
     line-height: 1.2;
     margin-top: 80px;
 }
