--- a/src/components/Srvc/Service.css
+++ b/src/components/Srvc/Service.css
@@ -8,6 +8,8 @@
     background: url('../../assets/images/programbg.png') no-repeat center center/cover;
     font-family: 'Poppins', Arial, sans-serif;
     overflow-x: hidden;
+    padding-top: 60px;
+    padding-bottom: 80px;
     /* border-top: 10px solid #fff5e7; */
 }
 
@@ -56,7 +58,7 @@
     margin-right: 15px;
     font-size: 1rem;
     color: #ffffff;
-    background: linear-gradient(45deg, #ff6600, #ff9900);
+    background: linear-gradient(135deg, #ffcb30, #ff8a00);
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
@@ -103,7 +105,6 @@
     align-items: center;
     padding: 20px;
     background: url('../../assets/images/Service.png') no-repeat center center/cover;
-    border-radius: 15px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     text-align: center;
@@ -122,8 +123,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to top, rgb(255, 221, 187), rgba(255, 255, 255, 0.2));
-    border-radius: 15px;
+    background: linear-gradient(to top, rgb(255, 240, 187), rgba(255, 255, 255, 0.2));
     /* Matches the parent border radius */
     z-index: 1;
     /* Places it above the image but below the content */
@@ -194,7 +194,7 @@
 
 @media (max-width: 480px) {
     .service-column {
-        flex: 0 1 100%;
+        flex: 0 1 90%;
     }
     .service-column-image {
         max-width: 100px;
@@ -239,7 +239,7 @@
 }
 
 .service-read-more-button {
-    background: linear-gradient(45deg, #ff6600, #ff9900);
+    background: linear-gradient(135deg, #ffcb30, #ff8a00);
     color: #fff;
     padding: 10px 10px;
     border: none;
@@ -251,4 +251,36 @@
 
 .service-read-more-button:hover {
     background-color: #0056b3;
+}
+
+
+/* Base Styles */
+
+.animated-section {
+    opacity: 0;
+    transform: translateX(50px);
+    transition: all 0.8s ease-in-out;
+}
+
+
+/* Animation Activated */
+
+.animated-section.animate {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+
+/* Specific Animations */
+
+.left-to-right.animate {
+    transform: translateX(0);
+}
+
+.right-to-left {
+    transform: translateX(-50px);
+}
+
+.right-to-left.animate {
+    transform: translateX(0);
 }
